--- a/src/styles/components/navigation.scss
+++ b/src/styles/components/navigation.scss
@@ -1,3 +1,6 @@
+@use '../settings' as *;
+
+
 .sidebar{
     background: $color-1;
     font-family: $font-1;
@@ -29,7 +32,10 @@
             width: 100%;
     
             img {
-                border-radius: 50%;
+                aspect-ratio: 1 / 1; 
+                border-radius: 50%; 
+                object-fit: cover;
+                overflow: hidden; 
                 box-shadow: 0 0 0 4px $color-3, 0 0 0 5px $color-4,0 0 0 12px $color-2;
             }
 
