--- a/src/styles/pages/_contact.scss
+++ b/src/styles/pages/_contact.scss
@@ -1,3 +1,5 @@
+@use '../settings' as *;
+
 .contact{
 .contactContent {
     background: $color-3 ;
@@ -24,7 +26,7 @@
           width: 100%;
           height: 100%;
           position: absolute;
-          background: url(../../../public/media/map.jpg) no-repeat center top/cover;
+          background: url(../../media/map.jpg) no-repeat center top/cover;
           filter: grayscale(100%);
         }
         &:after {
@@ -33,7 +35,7 @@
           height: 100%;
           position: absolute;
           top: 30px;
-          background: url(../../../public/media/shape.svg) no-repeat center /cover;
+          background: url(../../media/shape.svg) no-repeat center /cover;
     
         }
       }
