--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -1,3 +1,5 @@
+@use '../settings' as *;
+@use '../components/navigation';
 .home {
    .homeContent{
        background: linear-gradient(115deg, $color-1 50%, transparent 100%); 
